# HW_Web_Basics

./: README.md  exercise_1_1.html  exercize_1_2.html  exercize_1_3.html  exercize_1_4.html  main.py  pyproject.toml
